# src/rest/model/balance/create-balance-history.ts
@@ -1,16 +1,0 @@
-import { ApiProperty } from "@nestjs/swagger";
-import { IsDateString, IsNumber, IsUUID } from "class-validator";
-
-export class CreateBalanceHistory {
-  @IsUUID()
-  @ApiProperty({ format: "uuid" })
-  id: string;
-
-  @IsNumber()
-  @ApiProperty({ type: Number, example: 1500.75 })
-  amount: number;
-
-  @IsDateString()
-  @ApiProperty({ format: "date-time" })
-  createdAt: string;
-}
