# src/rest/model/balance/index.ts
@@ -1,2 +1,0 @@
-export * from "./balance-history";
-export * from "./create-balance-history";
